# PrettyLittleBabies_Paradigm

./: .gitignore  README.md  tmp_clean.py  tmp_convert.py  tmp_fix_ids.py
Backend/: package.json
Backend/src/: index.js
Backend/src/controllers/: auth.controller.js  autopilot.controller.js  message.controller.js
Backend/src/lib/: db.js  socket.js  utils.js
Backend/src/middleware/: auth.middleware.js
Backend/src/models/: message.model.js  user.model.js
Backend/src/routes/: auth.route.js  autopilot.route.js  message.route.js
Backend/src/seeds/: user.seed.js
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx  index.css
Frontend/src/components/: AnalysisPanel.jsx  ChatContainer.jsx  ChatHeader.jsx  MessageInput.jsx  Navbar.jsx  NoChatSelected.jsx  Sidebar.jsx
Frontend/src/pages/: HomePage.jsx  LoginPage.jsx  ProfilePage.jsx  SettingsPage.jsx  SignUpPage.jsx
Frontend/src/store/: useAuthStore.js  useAutopilotStore.js  useChatStore.js
data/: chat_data.json
social-autopilot/: .gitignore  config.py  graph.py  main.py  pyproject.toml  requirements.txt  rerun_orchestrator.py  save_collection.py  state.py
social-autopilot/agents/: __init__.py  historian.py  orchestrator.py  strategist.py
